[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentic-management-tooling-mcp"
version = "0.2.0"
description = "Vendor-agnostic agentic management tools: guardrails, API budget, session state, mobility intelligence, gig analysis."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "xmltodict>=0.13.0",
    "maidenhead>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentic*", "tools*", "intelligence*", "gig_mobility*"]

[project.scripts]
agentic-mcp = "server:main"
